fix header spacing

--- a/style.css
+++ b/style.css
@@ -172,6 +172,9 @@ body {
   background-color: #4169e1;
 }
 
+.space {
+  height: 11vh
+}
 .title p {
   background-color: rgba(0,0,0,.4);
   background-blend-mode: lighten;
